# cloudflare-r2-bucket-explorer

./: .gitignore  Cargo.toml  Makefile  README.md  wrangler.toml
.github/workflows/: ci.yml  rust.yml
assets/: styles.css
src/: app.rs  lib.rs  main.rs  serve_static.rs
src/api/: list_directory_contents.rs  mod.rs
src/components/: directory_view.rs  entry_view.rs  main_view.rs  mod.rs  root_directory_view.rs
src/utils/: emoji.rs
