[package]
name = "cloudflare-r2-bucket-explorer"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8", default-features = false, optional = true }
base64 = "0.22"
brotli = "8"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.3", default-features = false, features = [
	"wasm_js",
] }
gloo-console = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
http-body-util = "0.1"
humansize = "2"
itertools = "0.14"
leptos = "0.8"
leptos_axum = { version = "0.8", default-features = false, features = [
  "wasm",
], optional = true }
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_dom = "0.8"
log = "0.4"
more-asserts = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
send_wrapper = { version = "0.6", features = ["futures"] }
tower = { version = "0.5", optional = true }
tower-service = "0.3"
urlencoding = "2"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = "0.4"
worker = { version = "0.7", features = ["http", "axum", "d1"], optional = true }

[features]
hydrate = [
  "dep:wasm-bindgen",
  "leptos/hydrate",
]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:worker",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
]

[profile.release]
debug = true
opt-level = 0
strip = "none"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "cloudflare_r2_bucket_explorer"
# The site root folder is where cargo-leptos generate all output. WARNING all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "public"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
#style-file = "./style.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:8787"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "cargo make test-ui"
end2end-dir = "e2e"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
